c2/develop_node
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/develop_node/src/proof.c:1235:14: error: expected expression
*( ( _OWORD *)v9 + 2) = *( _OWORD *)&v6->from; 
             ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/develop_node/src/proof.c:1235:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)v9 + 2) = *( _OWORD *)&v6->from; 
     ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/develop_node/src/proof.c:1235:36: error: expected expression
*( ( _OWORD *)v9 + 2) = *( _OWORD *)&v6->from; 
                                   ^
/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/develop_node/src/proof.c:1235:28: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)v9 + 2) = *( _OWORD *)&v6->from; 
                           ^
4 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O2/sjeng-clang-O2/develop_node/src/obj/proof.o] Error 1
